Button functionality fixed

--- a/HEAM_UI/HEMAUI_ConfirmationPage.html
+++ b/HEAM_UI/HEMAUI_ConfirmationPage.html
@@ -4,7 +4,7 @@
 <head>
 
     <title>HEMA Alliance</title>
-    <link rel = "stylesheet" href = "css/confirmationpage_style.css" />
+    <link rel = "stylesheet" href = "../static/confirmationpage_style.css" />
 </head>
 
 <header class="container" >
