--- a/HEAM_UI/HEMAUI_Failpage.html
+++ b/HEAM_UI/HEMAUI_Failpage.html
@@ -4,7 +4,7 @@
 <head>
 
     <title>HEMA Alliance</title>
-    <link rel = "stylesheet" href = "css/failpage_style.css" />
+    <link rel = "stylesheet" href = "../static/failpage_style.css" />
 </head>
 
 <header class="container" >
